feat: carrinho de compras

--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
             <span style="font-weight: bold;">Total: {{total(produtos)}}</span>
         </div>
     </div>
-    <script src="./scrips.js"></script>
+    <script src="./scripts/scripts.js"></script>
 </body>
 </html>
