--- a/index.html
+++ b/index.html
@@ -17,20 +17,8 @@
 </head>
 <body>
     <div id="app">
-        <header>
-            <h1>Posts</h1>
-        </header>
-        <div id="container" class="container">
-            <div v-for="post in posts">
-                <post
-                v-bind:title="post.title"
-                v-bind:descrisao="post.descrisao"
-                v-bind:data="post.data"
-                ></post>
-            </div>
-        </div>
-        
-    </div>
+            <create-post @event-create-post="adicionarPost"></create-post>
+            <list-post @event-deletar-post-avo="deletarPost"  v-bind:posts="posts"></list-post>      
     </div>
     <script src="./scripts/scripts.js"></script>
 </body>
